fix: artist map gets misaligned/skewed
On normal desktop screens, the resolution is around 1440px. And the overall container
width is allowed to go upto 1400px. The aspect ratio of the artist map is 2:1 seems
to be 2:1. The current max-width breaks the aspect ratio when the width exceeds 1000px
which it does on most laptops. So increase the max-height from 500px to 700px so that
we can always maintain the aspect ratio.

--- a/frontend/css/year-in-music.less
+++ b/frontend/css/year-in-music.less
@@ -108,7 +108,7 @@
       height: auto;
       > div {
         min-height: 300px;
-        max-height: 500px;
+        max-height: 700px;
       }
     }
   }
